# soapus

./: Cargo.toml
soapus-cli/: Cargo.toml
soapus-codegen/src/generator/: rust_codegen.rs
soapus-codegen/src/parser/: mod.rs
soapus-codegen/src/parser/xsd/: complex_type.rs  mod.rs
soapus-codegen/tests/: integration_test.rs
soapus-runtime/src/: client.rs
testdata/wsdl/: attributes_test.wsdl
