[package]
name = "soapus-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line tool for WSDL parsing and SOAP client code generation"
keywords = ["soap", "wsdl", "cli", "codegen", "webservice"]
categories = ["command-line-utilities", "development-tools::build-utils"]
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "../LICENSE-MIT",
]

[[bin]]
name = "soapus-cli"
path = "src/main.rs"

[dependencies]
soapus-codegen = { version = "0.1", path = "../soapus-codegen" }
clap = { version = "4.6", features = ["derive"] }
anyhow = { workspace = true }
